syntax = "proto3";

option go_package = "./protoc";
package gomq.cluster;

message User {
    string name = 1;
    int32 role = 2;
    string api_key = 3;
}

message AuthStore {
    User admin = 1;
    map<string, User> users = 2;
}

message QueueConfig {
    bool dlq = 1;
    int32 max_retries = 2;
}

message SyncMetadataRequest{
}

message StringList{
    repeated string elements = 1;
}

message Bindings{
    map<string, StringList> queue_bindings = 1;
}

message SyncClusterStateRequest{
    AuthStore auth_store = 1;
    map<string, int32> exchanges = 2;
    map<string, string> schema_registry = 3;
    map<string, QueueConfig> queue_configs = 4;
    map<string, StringList> queues = 5;
    map<string, Bindings> bindings = 6;
}

message SyncClusterStateResponse{
  bool status = 1;
  string message = 2;
}

service ClusterSync {
    rpc SyncCluster(SyncClusterStateRequest) returns (SyncClusterStateResponse);
}